fix mobile menu and page transition overlap conflict

--- a/src/components/Transition/transition.css
+++ b/src/components/Transition/transition.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     background-image: linear-gradient(to bottom, #f4f4f5 0vh, #d4d4d8 100vh);
-    z-index: 99;
+    z-index: 9999;
     border-radius: 40px 40px 0 0;
     box-shadow: 0px -20px 50px rgba(0, 0, 0, 0.2);
 }
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     background-image: linear-gradient(to top, #f4f4f5 0vh, #d4d4d8 100vh);
-    z-index: 99;
+    z-index: 9999;
     border-radius: 0 0 40px 40px;
     box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.2);
 }
@@ -34,6 +34,6 @@
     font-size: 2.5rem;
     font-weight: 500;
     letter-spacing: 2px;
-    z-index: 100;
+    z-index: 10000;
     pointer-events: none;
 }
